<resources>
    <string name="app_name">TOR_Diceroller</string>
    <string name="action_settings">Settings</string>
    <string name="test_app">Test1</string>
    <string name="button_main">Roll!!!</string>
    <string name="switch_main_1">Weary</string>
    <string name="switch_main_2">Advantage</string>
    <string name="switch_main_3">Disadvantage</string>
    <string name="switch_main_4">No Feat Die</string>
    <string name="seekbar_main"># of Dice</string>

    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
