<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="chimzart.tor_diceroller.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_app"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        tools:layout_editor_absoluteY="286dp" />

    <Button
        android:id="@+id/button_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_dices"
        android:layout_width="285dp"
        android:layout_height="21dp"
        android:max="6"
        android:progress="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.473"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="81dp" />

    <Switch
        android:id="@+id/switch_advantage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/switch_main_2"
        app:layout_constraintRight_toRightOf="@+id/seekBar_dices"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_dices" />

    <Switch
        android:id="@+id/switch_weary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_main_1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/seekBar_dices"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_dices" />

    <TextView
        android:id="@+id/seekBar_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_dices"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Switch
        android:id="@+id/switch_disadvantage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/switch_main_3"
        app:layout_constraintTop_toBottomOf="@+id/switch_advantage"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/switch_advantage" />

    <Switch
        android:id="@+id/switch_feat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_main_4"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/switch_weary"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/switch_weary" />

</android.support.constraint.ConstraintLayout>
